Continued implementing the grid canvas. It's not quite functional, yet, as there are several problems: - If the viewpoint is off-center, the lines will stop drawing. - I need a clear head to figure out the magnitude of the zoom offset coordinates. - The canvas needs to adjust its size whenever the window gets resized. - The mini map canvas is completely untouched and apparently has a size of 0. - I'm hungry and lost my ability to brain for today.

--- a/TicTacTorus/wwwroot/css/custom.css
+++ b/TicTacTorus/wwwroot/css/custom.css
@@ -248,9 +248,18 @@ input {
 }
 
 .canvas {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: white;
+}
+
+canvas
+{
+    display: block;
+    position: fixed;
 }
 
 [contenteditable="true"]:focus {
